--- a/index.html
+++ b/index.html
@@ -5,8 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Career Adventures</title>
+
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
+
+    <script src="javascript/main.js"></script>
+
 </head>
 <body>
-    
+    <div class="container">
+        <div class="twelve columns">
+            <h1>Choose a Career Path Adventure</h1>
+        </div>
+    </div>
 </body>
 </html>
