--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@
 <body>
     <div class="container">
         <div class="twelve columns">
-            <h1>Choose a Career Path Adventure</h1>
+            <br/>
+            <h1>Title: Choose a Career Path Adventure</h1>
+            <br/>
+        </div>
+
+        <div class="twelve columns question" id="1">
+            <h4>Content test question</h4>
         </div>
     </div>
 </body>
