added basic router

--- a/index.html
+++ b/index.html
@@ -16,14 +16,23 @@
 <body>
     <div class="container">
         <div class="twelve columns">
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+            </ul>
             <br/>
             <h1>Title: Choose a Career Path Adventure</h1>
             <br/>
         </div>
 
-        <div class="twelve columns question" id="1">
+        <div class="six columns question offset-by-two" id="1">
             <h4>Content test question</h4>
         </div>
     </div>
+    <div id="app"></div>
+
+    <script src="javascript/route.js"></script>
+    <script src="javascript/router.js"></script>
+    <script src="javascript/app.js"></script>    
 </body>
 </html>
