--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 </head>
 <body>
     <div class="container">
+    <div class="container">
+        <p><a href="#about">About</a></p>
+    </div>
     <div id="app"></div>
 
     <script src="javascript/route.js"></script>
