--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Career Adventures</title>
 
-    <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
+    <link href="https://fonts.googleapis.com/css?family=VT323" rel="stylesheet">
+    <link rel="stylesheet" href="css/main.css">
 
     <script src="javascript/main.js"></script>
 
@@ -20,8 +20,6 @@
         <a href="#home" class="active">Logo</a>
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
-            <a href="#news">News</a>
-            <a href="#contact">Contact</a>
             <a href="#about">About</a>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
