--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="#home" class="active">Logo</a>
+        <a href="#home" class="active">Careers Adventure</a>
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
-            <a href="#about">About</a>
+            <a href="#home" class="option">Home</a>
+            <a href="#about" class="option">About</a>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
