--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <div id="myLinks">
             <a href="#home" class="option">Home</a>
             <a href="#about" class="option">About</a>
+            <a href="#choice-result" class="option">Choice Result</a>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
