Menu collapses on click

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         <a href="#home" class="active">Careers Adventure</a>
         <!-- Navigation links (hidden by default) -->
         <div id="myLinks">
-            <a href="#home" class="option">Home</a>
-            <a href="#about" class="option">About</a>
-            <a href="#choice-result" class="option">Choice Result</a>
+            <a href="#home" class="option" onclick="myFunction()">Home</a>
+            <a href="#about" class="option" onclick="myFunction()">About</a>
+            <a href="#choice-result" class="option" onclick="myFunction()">Choice Result</a>
         </div>
         <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
